trunk/Archive2/5a/bc52fb01136e01/output
main.cpp:9:5: error: if statement has empty body [-Werror,-Wempty-body]
    LOG(1) << "1";
    ^
main.cpp:5:42: note: expanded from macro 'LOG'
#define LOG(level) if (level < log_level); std::cout
                                         ^
main.cpp:9:5: note: put the semicolon on a separate line to silence this warning
main.cpp:5:42: note: expanded from macro 'LOG'
#define LOG(level) if (level < log_level); std::cout
                                         ^
main.cpp:10:5: error: if statement has empty body [-Werror,-Wempty-body]
    LOG(2) << "2";
    ^
main.cpp:5:42: note: expanded from macro 'LOG'
#define LOG(level) if (level < log_level); std::cout
                                         ^
main.cpp:10:5: note: put the semicolon on a separate line to silence this warning
main.cpp:5:42: note: expanded from macro 'LOG'
#define LOG(level) if (level < log_level); std::cout
                                         ^
2 errors generated.
